crates/macro-tools/tests/ui/builder/fail/duplicate_skip.stderr
error: duplicate `skip` builder option
 --> tests/ui/builder/fail/duplicate_skip.rs:5:21
  |
5 |     #[builder(skip, skip, default)]
  |                     ^^^^
